--- a/My_porfolio.css
+++ b/My_porfolio.css
@@ -1188,7 +1188,7 @@ nav{
 }
 
 .skill-card {
-    background-color:  rgba(0, 58, 71, 0.15);;
+    background-color:  rgba(0, 58, 71, 0.15);
     backdrop-filter: blur(10px);
     padding: 24px;
     border-radius: 20px;
@@ -1275,11 +1275,13 @@ nav{
 
 .skill-progress {
     height: 100%;
-    /* background: rgb(4, 180, 180); */
+   
     border-radius: 4px;
     width: 0;
     transition: width 1s ease;
-        background: rgb(4, 180, 180, 0.7);
+        /* background: rgb(4, 180, 180, 0.7); */
+        /* color: rgb(0, 207, 255, 0.6); */
+        background: rgb(0, 207, 255, 0.6) ;
 }
 
 .skill-percent {
@@ -1342,10 +1344,195 @@ nav{
              width: 100%;
              padding: 50px;
               background-image: radial-gradient( rgb(1, 22, 42) 5% , black );
-              border: 1px solid white;
+              /* border: 1px solid white; */
 
+              display:flex ;
+              justify-content: center;
+              align-items: center;
+              flex-direction: column;
+
+              
            
 }
+
+.section-subtitle{
+
+           margin-bottom: 15px;
+}
+
+
+.education-h1{
+           color: white;
+           font-family: "Jost", sans-serif;
+  font-optical-sizing: auto;
+  font-weight:600;
+  font-style: normal;
+  font-size: 50px;
+  padding-bottom: 30px;
+}
+
+
+
+
+.education-h1 span{
+
+           border-bottom: 2px solid rgb(0, 207, 255, 0.6);
+           padding-bottom: 10px;
+}
+
+
+.education-content{
+
+           width: 100%;
+           padding: 10px;
+           /* border: 1px solid yellow; */
+           margin-top: 30px;
+
+           display: flex;
+           justify-content: center;
+           align-items: center;
+}
+
+.college{
+
+          border: 1px solid rgb(255, 255, 255,0.1);
+          padding: 30px;
+          width: 80%;
+          border-radius: 30px;
+          background-color: rgb(128, 128, 128,0.1);
+          backdrop-filter: blur(10px);
+            background-color:  rgba(0, 58, 71, 0.07);;
+    backdrop-filter: blur(10px);
+    transition: all 0.5s;
+          
+          
+}
+
+.college:hover{
+
+          box-shadow: 0px 0px 5px rgb(0, 125, 123);
+          transform: translateX(30px);
+}
+
+.collegename{
+          color: white;
+          display: flex;
+          justify-content: space-between;
+}
+
+.collegename span{
+
+          font-size: 20px;
+          font-weight: 400;
+          color: rgb(0, 207, 255,0.9);
+
+}
+
+
+
+
+
+
+.collegename button{
+
+        
+          color: rgb(0, 207, 255,0.9);
+          background-color: rgb(0, 207, 255,0.1);
+          backdrop-filter: blur(10px);
+          border: none;
+          border-radius: 30px;
+          width: 130px;
+          height: 30px;
+          border: 1px solid rgb(0, 207, 255,0.2);
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          padding-bottom: 2px;
+}
+
+.collegename button:hover{
+
+           color: grey;
+}
+
+
+.college-cgpa{
+          margin-top: 30px;
+          display: flex;
+         
+
+}
+
+.college-cgpa button{
+         background-color: rgba(90, 88, 88, 0.3);
+         width: 120px;
+         border: none;
+         color:rgb(216, 215, 215,0.8);
+         border-radius: 30px;
+         height: 30px;
+         border: 1px solid rgb(211, 211, 211,0.2);
+          padding-bottom: 2px;
+}
+
+
+.collegename h3 {
+        
+           color: white;
+           font-family: "Jost", sans-serif;
+  font-optical-sizing: auto;
+  font-weight:400;
+  font-style: normal;
+  font-size: 25px;
+
+
+}
+
+.education-content p{
+         margin: 0px;
+         margin-top: 3px;
+}
+
+.edu-i{
+
+          color: rgb(214, 214, 214,0.6);
+         
+         
+}
+
+.edu-i i{
+
+          color: rgb(0, 207, 255, 0.5);
+}
+
+
+.schoolname span{
+
+          font-size: 18px;
+          color: rgb(172, 87, 251);
+}
+
+.schoolname button{
+          background-color:rgb(172, 87, 251,0.1) ;
+          color: rgb(172, 87, 251);
+          border:  1px solid rgb(172, 87, 251,0.2);
+          height: 25px;
+          width: 110px;
+          font-size: 14px;
+          padding-bottom: 1px;
+}
+
+.schoolname h3{
+          font-size: 23px;
+          color: rgb(198, 198, 198);
+}
+
+.school-per button{
+
+           font-size: 14px;
+           height: 25px;
+           width: 100px;
+}
+
 
 
 
@@ -1700,8 +1887,31 @@ nav{
          .skillbox h2{
              font-size: 20px;
          }
+
+
+
+
+
+/* Education  */
+
+
+.college{
+          width: 100%;
+}
+
+.education-container{
+         padding: 20px;
+         padding-top: 50px;
+         padding-bottom: 50px;
+}
+
+
       
 }
+
+
+
+
 
 
 
@@ -1774,6 +1984,7 @@ nav{
       }
       .name{
               padding: 5px;
+              padding-top: 8px;
       }
     
       .name ul{
@@ -2185,9 +2396,100 @@ nav{
      }
 
 
+
+     /* Education  */
+
+      .collegename{
+          display: flex;
+          flex-direction: column;
+          justify-content: flex-start;
+          margin-bottom: 20px;
+} 
+
+.college{
+          border-radius: 15px;
+          padding: 15px;
+}
+
+.education-container{
+        padding: 10px;
+        padding-bottom: 50px;
+        padding-top: 50px;
+}
+
+.education-h1{
+          font-size: 40px;
+}
+
+.collegename h3{
+          font-size: 20px;
+}
+
+.collegename span{
+          font-size: 17px;
+}
+
+.collegename button{
+          height: 25px;
+          font-size: 14px;
+          width: 105px;
+          padding-bottom: 1px;
+}
       
+.education-content p{
+          font-size: 14px;
+}
+
+.college-cgpa button{
+          height: 25px;
+          font-size: 13px;
+          width: 100px;
+         
+}
+
+.college-cgpa{
+         margin-top: 20px;
+}
+
+.schoolname button{
+
+          height: 20px;
+          font-size: 12px;
+          width: 95px;
+}
+
+.school-per button{
+
+          font-size: 12px;
+          height: 20px;
+          width: 90px;
+}
+
+.schoolname span{
+          font-size: 16px;
+}
+
+.schoolname h3{
+          font-size: 19px;
+}
+
+.college:hover{
+
+          box-shadow: 0px 0px 0px rgb(0, 125, 123);
+          transform: translateX(0px);
+}
+
+.education-content{
+
+           margin-top: 0px;
+}
       
 }
+
+
+
+
+
 
 
 
